@@ -1,5 +1,8 @@
 2023-05-13  Oliver Kiddle  <opk@zsh.org>
 
+	* 51728: Doc/Zsh/mod_pcre.yo, Src/Modules/pcre.c,
+	Test/V07pcre.ztst: assign pcre named capture groups to a hash
+
 	* 51723: Src/Modules/pcre.c, Test/V07pcre.ztst, configure.ac:
 	migrate pcre module to pcre2
 
